# doppler-clone

./: idea.txt
BACKEND/: Cargo.toml
BACKEND/auth/: Cargo.toml  Dockerfile  rustfmt.toml
BACKEND/auth/src/: lib.rs  main.rs
BACKEND/auth/src/app/: app.rs  login.rs  mod.rs  signup.rs
BACKEND/auth/src/application/: app.rs  app_data.rs  app_trait.rs  application.rs  auth.rs  business.rs  login.rs  mod.rs  signup.rs  user.rs
BACKEND/auth/src/config/: config.rs
BACKEND/auth/src/connections/: mod.rs
BACKEND/auth/src/constants/: env.rs
BACKEND/auth/src/controllers/: controllers.rs  mod.rs
BACKEND/auth/src/downstream/: downstream.rs  mod.rs
BACKEND/auth/src/models/: business.rs  mod.rs  user.rs
BACKEND/auth/src/repositories/: business.rs  mod.rs  repositories.rs
BACKEND/gateway/: Cargo.toml
BACKEND/gateway/src/: lib.rs  main.rs
BACKEND/gateway/src/controllers/: auth.rs  controller.rs  mod.rs  page404.rs  secret.rs
BACKEND/gateway/src/helper/: helper.rs
BACKEND/sdk/: Cargo.toml  build.rs
BACKEND/sdk/src/: lib.rs
BACKEND/secret/: Cargo.toml
BACKEND/secret/src/: main.rs
ENVIRONMENTS/: auth.yaml
FRONTEND/: .env  package-lock.json
FRONTEND/public/: index.html
FRONTEND/src/: App.tsx  index.tsx
FRONTEND/src/Sass/: index.scss
FRONTEND/src/Sass/constant/: index.scss
FRONTEND/src/Sass/mixin/: index.scss
SCRIPTS/: commit.sh  deploy.sh
UI/: .env  package-lock.json  package.json
UI/public/: index.html
UI/src/Startup/: App.tsx
scripts/: deploy.sh  run-containers.sh
