[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "auth"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
sdk = { path = "../sdk" }
tokio = "1.29.1"
anyhow = "1.0.72"
dotenvy = "0.15.7"
sea-orm = { version = "0.12.4", features = ["uuid"] }
chrono = "0.4.31"
sea-orm-macros = "0.12.5"
serde = "1.0.192"
# sea-orm-macros = "0.12.5"
#
#sea-orm-macros = { version = "0.12.3", default-features = false, features = ["strum"] }
#sea-query = { version = "0.30.2", default-features = false, features = ["backend-postgres", "uuid"] }
#sea-query-binder = { version = "0.5.0", default-features = false, optional = true }
